--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-spring/three": "^9.7.5",
+    "@react-three/drei": "^9.116.0",
     "@react-three/fiber": "^8.17.10",
     "@types/three": "^0.169.0",
     "@use-gesture/react": "^10.3.1",
@@ -26,11 +29,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-share": "^5.0.3",
+    "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
