--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-share": "^5.0.3",
+    "schema-dts": "^1.1.2",
     "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
