--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/drei": "^9.116.0",
     "@react-three/fiber": "^8.17.10",
     "@types/three": "^0.169.0",
+    "@types/webspeechapi": "^0.0.29",
     "@use-gesture/react": "^10.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
