Enhance Firebase integration by adding Firebase Admin SDK setup and implementing real-time event registration logic. Update ticket schema documentation to reflect new fields and improve date parsing and confidence scoring mechanisms for event normalization.

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@types/three": "^0.169.0",
     "@types/webspeechapi": "^0.0.29",
     "@use-gesture/react": "^10.3.1",
+    "chrono-node": "^2.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^11.11.11",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.293.0",
