Add GitHub Actions workflow for real-time registration API calls, scheduled to run hourly. Updated timeout settings and added error handling for missing secrets. Refactored real-time registration logic to improve event normalization and handle duplicate entries. Enhanced date parsing and updated Firestore document handling for better performance.

--- a/.github/workflows/realtime-register-transfer.yml
+++ b/.github/workflows/realtime-register-transfer.yml
@@ -3,7 +3,7 @@ name: Realtime Register
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 * * * *" # Every hour at minute 0
+    - cron: "15 * * * *" # Every hour at minute 15
 
 jobs:
   trigger-register:
@@ -25,4 +25,4 @@ jobs:
             -X POST "$BASE_URL/api/internal/realtime/register" \
             -H "Authorization: Bearer $API_TOKEN" \
             -H "Content-Type: application/json" \
-            -d '{"query":"#謎チケ売ります","limit":40,"dryRun":false}'
+            -d '{"query":"#謎チケ譲ります","limit":40,"dryRun":false}'
