--- a/.github/workflows/realtime-register-transfer.yml
+++ b/.github/workflows/realtime-register-transfer.yml
@@ -1,4 +1,4 @@
-name: Realtime Register
+name: Realtime Register Transfer
 
 on:
   workflow_dispatch:
@@ -25,4 +25,4 @@ jobs:
             -X POST "$BASE_URL/api/internal/realtime/register" \
             -H "Authorization: Bearer $API_TOKEN" \
             -H "Content-Type: application/json" \
-            -d '{"query":"#謎チケ譲ります","limit":40,"dryRun":false}'
+            -d '{"query":"#謎チケ譲ります","limit":20,"dryRun":false}'
