--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "framer-motion": "^11.11.11",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.293.0",
-    "next": "14.0.3",
+    "next": "^14.2.35",
     "react": "^18",
     "react-dom": "^18",
     "react-share": "^5.0.3",
