feat: Integrate canvas-confetti for celebratory effects in BLANK25 game
- Added canvas-confetti library to enhance user experience with visual effects upon game completion.
- Implemented a new Blank25ClearDialog component to display the score and opened panels after solving a problem.
- Updated Blank25Game component to manage confetti effects and dialog visibility based on game state.
- Introduced cleanup logic for confetti animations to ensure proper resource management.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/three": "^0.169.0",
     "@types/webspeechapi": "^0.0.29",
     "@use-gesture/react": "^10.3.1",
+    "canvas-confetti": "^1.9.4",
     "chrono-node": "^2.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
